[gd_scene load_steps=7 format=1]

[ext_resource path="res://shared/volume-control/volume-control.gd" type="Script" id=1]
[ext_resource path="res://resources/themes/volume-control.tres" type="Theme" id=2]
[ext_resource path="res://resources/fonts/topo.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="Animation" id=2]

resource/name = "hide"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0.6 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"hide" } ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.6 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[sub_resource type="Animation" id=3]

resource/name = "show"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0 ), "transitions":FloatArray( 1 ), "values":[ { "args":[  ], "method":"show" } ] }
tracks/1/type = "value"
tracks/1/path = NodePath(".:visibility/opacity")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = { "times":FloatArray( 0, 0.6 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[node name="volume-control" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="control" type="Control" parent="."]

visibility/visible = false
anchor/top = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 250.0
margin/right = 200.0
margin/bottom = 0.0

[node name="Panel" type="Panel" parent="control"]

visibility/opacity = 0.15
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="global" type="VSlider" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 22.0
margin/top = 8.0
margin/right = 30.0
margin/bottom = 223.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="samples" type="VSlider" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 93.0
margin/top = 8.0
margin/right = 101.0
margin/bottom = 223.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="music" type="VSlider" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 163.0
margin/top = 8.0
margin/right = 171.0
margin/bottom = 223.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="global-label" type="Label" parent="control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 8.0
margin/top = 228.0
margin/right = 48.0
margin/bottom = 242.0
text = "100 %"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="samples-label" type="Label" parent="control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 228.0
margin/right = 118.0
margin/bottom = 242.0
text = "100 %"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="music-label" type="Label" parent="control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 148.0
margin/top = 228.0
margin/right = 188.0
margin/bottom = 242.0
text = "100 %"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text-global" type="Label" parent="control"]

visibility/opacity = 0.2
rect/rotation = 90.0
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = 202.0
margin/right = 176.0
margin/bottom = 234.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "Global"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text-samples" type="Label" parent="control"]

visibility/opacity = 0.2
rect/rotation = 90.0
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 86.0
margin/top = 212.0
margin/right = 275.0
margin/bottom = 244.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 1, 0.999961 )
text = "Samples"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="text-music" type="Label" parent="control"]

visibility/opacity = 0.2
rect/rotation = 90.0
focus/ignore_mouse = true
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 155.0
margin/top = 187.0
margin/right = 290.0
margin/bottom = 219.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "Music"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="animation" type="AnimationPlayer" parent="control"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/hide = SubResource( 2 )
anims/show = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="timer" type="Timer" parent="control"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="value_changed" from="control/global" to="." method="_on_global_value_changed"]

[connection signal="value_changed" from="control/samples" to="." method="_on_samples_value_changed"]

[connection signal="value_changed" from="control/music" to="." method="_on_music_value_changed"]

[connection signal="timeout" from="control/timer" to="." method="_on_timer_timeout"]


